@@ -107,6 +107,7 @@ struct c3x_config {
 	char charm_flag_triggers_ptw_like_targeting;
 	char city_icons_show_unit_effects_not_trade;
 	char ignore_king_ability_for_defense_priority;
+	char show_untradable_techs_on_trade_screen;
 
 	char use_offensive_artillery_ai;
 	int ai_build_artillery_ratio;
