@@ -298,6 +298,8 @@ repl call, 0x4A149F,	0x4A804F,	0x4A152F,	"Unit_check_king_for_defense_priority",
 repl call, 0x598EC5,	0x5A686D,	0x598BE5,	"get_local_time_for_unit_ini",			""
 repl call, 0x598AEC,	0x5A63F8,	0x59880C,	"get_local_time_for_unit_ini",			""
 define,	   0x581330,	0x58E060,	0x581090,	"Trade_Net_get_direction_from_internal_map",	"int (__fastcall *) (Trade_Net * this, int edx, int x, int y, byte use_data_2_else_4)"
+inlead,	   0x50EC10,	0x0,		0x0,		"DiploForm_assemble_tradable_items",		"void (__fastcall *) (DiploForm * this)"
+inlead,	   0x437F80,	0x0,		0x0,		"Leader_could_buy_tech_on_trade_screen",	"byte (__fastcall *) (Leader * this, int edx, int tech_id, int from_civ_id)"
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
