@@ -258,3 +258,6 @@ charm_flag_triggers_ptw_like_targeting = false
 ; Units with the king ability will defend like normal, instead of always being the last to defend in a stack. Useful for mods that use the king flag
 ; for special purposes. Does not apply in regicide games.
 ignore_king_ability_for_defense_priority = false
+
+; Untradable techs will appear grayed out on the trade screen. This lets you see which untradable techs the AI has just like for tradable ones.
+show_untradable_techs_on_trade_screen = false
